# aptprep

./: .bazelrc  .commitlintrc.json  .gitignore  .prettierrc  .release-please.json  AGENTS.md  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  SECURITY.md  config.yaml  package.json  pnpm-lock.yaml  release-please-config.json  rustfmt.toml
.claude/: settings.json
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  release-please.yml  release.yml  snapshot-build.yml  test.yml
crates/aptprep-cli/: BUILD.bazel  Cargo.toml
crates/aptprep-cli/src/: main.rs
crates/aptprep-e2e-tests/: BUILD.bazel  Cargo.toml
crates/aptprep-e2e-tests/src/: test_utils.rs
crates/aptprep-e2e-tests/tests/: lockfile_generation.rs
crates/aptprep-lib/: BUILD.bazel  Cargo.toml
crates/aptprep-lib/src/: error.rs  lib.rs  lockfile.rs  utils.rs
crates/aptprep-lib/src/cli/: args.rs  commands.rs  download.rs  generate_packages_file_from_lockfile.rs  lock.rs  mod.rs  params.rs  resolved_command.rs
crates/aptprep-lib/src/config/: loader.rs  mod.rs  model.rs
crates/aptprep-lib/src/dependency/: mod.rs  provider.rs  resolver.rs  types.rs
crates/aptprep-lib/src/download/: download.rs  mod.rs  types.rs
crates/aptprep-lib/src/lockfile/: package_name_and_version.rs
crates/aptprep-lib/src/output/: mod.rs  packages.rs
crates/aptprep-lib/src/repository/: collector.rs  mod.rs  types.rs
crates/aptprep-lib/src/verification/: content_digest_hasher.rs  mod.rs
e2e/: BUILD.bazel  podman_apt_test.bzl  test_config.yaml  test_script.sh.tpl
scripts/: format.sh
tools/licenses/: BUILD.bazel  cargo_cyclonedx.bzl  spdx_repo.bzl
tools/licenses/extract_licenses/: BUILD.bazel  Cargo.toml
tools/licenses/extract_licenses/src/: main.rs
