load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//tools/licenses:cargo_cyclonedx.bzl", "cargo_cyclonedx")

rust_binary(
    name = "aptprep",
    srcs = ["src/main.rs"],
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//crates/aptprep-lib",
    ] + all_crate_deps(
        normal = True,
    ),
)
