load("@crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "aptprep-e2e-tests",
    srcs = glob(["src/**/*.rs"]),
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = [
        "//crates/aptprep-lib",
    ] + all_crate_deps(
        normal = True,
    ),
)

rust_test(
    name = "lockfile_generation_test",
    srcs = ["tests/lockfile_generation.rs"],
    edition = "2024",
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ) + all_crate_deps(
        proc_macro_dev = True,
    ),
    deps = [
        ":aptprep-e2e-tests",
        "//crates/aptprep-lib",
    ] + all_crate_deps(
        normal = True,
    ) + all_crate_deps(
        normal_dev = True,
    ),
)
