[package]
name = "aptprep-e2e-tests"
description = "End-to-end tests for aptprep"
publish = false

version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Core library for testing
aptprep-lib = { workspace = true }

# Test utilities
tokio = { workspace = true }
tempfile = "3.14.0"
serde_json = { workspace = true }

# Logging for test debugging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
eyre = { workspace = true }

[dev-dependencies]
# For asserting test results
assert_fs = "1.1.2"
predicates = "3.1.2"