[package]
name = "extract_licenses"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "extract_licenses"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spdx = "0.12.0"
eyre = "0.6"
base64 = "0.22"
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"] }